[gd_scene load_steps=15 format=2]

[ext_resource path="res://Pac-Man/Scripts/EnemigoPacman.gd" type="Script" id=1]
[ext_resource path="res://Pac-Man/Sprites/Sprites Pac-Man/Clyde/Clyde  down 01.png" type="Texture" id=2]
[ext_resource path="res://Pac-Man/Sprites/Sprites Pac-Man/Clyde/Clyde down 02.png" type="Texture" id=3]
[ext_resource path="res://Pac-Man/Sprites/Sprites Pac-Man/Clyde/Clyde up 01.png" type="Texture" id=4]
[ext_resource path="res://Pac-Man/Sprites/Sprites Pac-Man/Clyde/Clyde up 02.png" type="Texture" id=5]
[ext_resource path="res://Pac-Man/Sprites/Sprites Pac-Man/Vulnerable 01.png" type="Texture" id=6]
[ext_resource path="res://Pac-Man/Sprites/Sprites Pac-Man/Vulnerable 02.png" type="Texture" id=7]
[ext_resource path="res://Pac-Man/Sprites/Sprites Pac-Man/Vulnerable 03.png" type="Texture" id=8]
[ext_resource path="res://Pac-Man/Sprites/Sprites Pac-Man/Vulnerable 04.png" type="Texture" id=9]
[ext_resource path="res://Pac-Man/Sprites/Sprites Pac-Man/Clyde/Clyde side 01.png" type="Texture" id=10]
[ext_resource path="res://Pac-Man/Sprites/Sprites Pac-Man/Clyde/Clyde side 02.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "Abajo",
"speed": 7.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "Arriba",
"speed": 7.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "Vulnerable",
"speed": 6.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "Lado",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5, 5 )

[node name="Clyde" type="KinematicBody2D"]
collision_layer = 8
collision/safe_margin = 0.001
script = ExtResource( 1 )
speed = 100

[node name="AnimacionEnemigoPacman" type="AnimatedSprite" parent="."]
scale = Vector2( 0.15, 0.15 )
frames = SubResource( 1 )
animation = "Abajo"
frame = 1
playing = true

[node name="ColisionEnemigoPacman" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="TimerRespawn" type="Timer" parent="."]
wait_time = 7.0

[node name="TimerReaccion" type="Timer" parent="."]

[node name="AreaHitBox" type="Area2D" parent="."]
collision_layer = 9
collision_mask = 9

[node name="HitBox" type="CollisionShape2D" parent="AreaHitBox"]
shape = SubResource( 3 )

[node name="TimerVulnerable" type="Timer" parent="."]

[connection signal="timeout" from="TimerRespawn" to="." method="_on_TimerRespawn_timeout"]
[connection signal="timeout" from="TimerReaccion" to="." method="_on_TimerReaccion_timeout"]
[connection signal="body_entered" from="AreaHitBox" to="." method="_on_AreaHitBox_body_entered"]
[connection signal="timeout" from="TimerVulnerable" to="." method="_on_TimerVulnerable_timeout"]
